[build-system]
requires = [
  "setuptools >= 69.0.0",
  "wheel >= 0.40.0",
  "pyTooling ~= 6.0"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.mypy]
files = ["pyVHDLModel"]
python_version = "3.12"
#ignore_missing_imports = true
strict = true
pretty = true
show_error_context = true
show_error_codes = true
namespace_packages = true
html_report = "report/typing"

[tool.pytest.ini_options]
# Don't set 'python_classes = *' otherwise, pytest doesn't search for classes
# derived from unittest.Testcase
python_files = "*"
python_functions = "test_*"
filterwarnings = [
	"error::DeprecationWarning",
	"error::PendingDeprecationWarning"
]
junit_logging = "all"

[tool.interrogate]
color = true
verbose = 1             # possible values: 0 (minimal output), 1 (-v), 2 (-vv)
fail-under = 80
#generate-badge = "."
#badge-format = "png"
ignore-setters = true

[tool.coverage.run]
branch = true
relative_files = true
omit = [
	"*site-packages*",
	"setup.py",
	"tests/benchmark/*",
	"tests/performance/*",
	"tests/platform/*",
	"tests/unit/*"
]

[tool.coverage.report]
skip_covered = false
skip_empty = true
exclude_lines = [
	"pragma: no cover",
	"raise NotImplementedError"
]
omit = [
	"tests/*"
]

[tool.coverage.xml]
output = "report/coverage/coverage.xml"

[tool.coverage.json]
output = "report/coverage/coverage.json"

[tool.coverage.html]
directory = "report/coverage/html"
title="Code Coverage of pyVHDLModel"
